# task2_recognition

./: CMakeLists.txt  package.xml
cfg/: ErlTask2Recognition.cfg  Task2Recognition.cfg
config/: tts.yaml
include/: person_definition.h  task2_recognition.h  task2_recognition_client_alg.h  task2_recognition_client_alg_node.h
launch/: recognition_client.launch
src/: task2_recognition.cpp  task2_recognition_client_alg.cpp  task2_recognition_client_alg_node.cpp
